--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ python:
 before_script:
   - pip install -r requirements.txt
 
-env: DJANGO_SETTINGS_MODULE="pur_beurre_project_app.settings"
-
 services:
   - postgresql
+
+env: DJANGO_SETTINGS_MODULE="pur_beurre_project_app.settings.travis"
 
 script:
   - python manage.py test
