--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,12 @@ env:
 
 addons:
   firefox: latest
+  apt:
+    packages:
+      - xvfb
+install:
+  - export DISPLAY=':99.0'
+  - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
 
 script:
   - python manage.py test
