--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,10 @@ services:
     # exécuter la commande Django runserver
     # qui démarre un serveur de développement
     # https://docs.djangoproject.com/en/2.1/ref/django-admin/#runserver
-    command: python3 manage.py runserver 0.0.0.0:8000
+    command: python manage.py runserver 0.0.0.0:8000
     # monter le dossier local actuel (dossier du projet) dans /app
     # dans le conteneur
     volumes:
       - .:/app
-    # lier le port 8000 dans le conteneur au port 8000 dans la machine locale
     ports:
       - 8004:8000
