--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ coverage==5.5
 crayons==0.4.0
 Django==3.2
 django-crispy-forms==1.11.1
+django-crontab==0.7.1
 django-debug-toolbar==3.2
 django-request==1.5.6
 django-selenium-login==2.0.0
