--- a/requirements.txt
+++ b/requirements.txt
@@ -16,9 +16,9 @@ idna==2.10
 psycopg2==2.8.6
 python-dateutil==2.8.1
 pytz==2021.1
-raven==6.10.0
 requests==2.25.1
 selenium==3.141.0
+sentry-sdk==1.0.0
 six==1.15.0
 sqlparse==0.4.1
 urllib3==1.26.4
