--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,11 @@ django-request==1.5.6
 django-selenium-login==2.0.0
 gunicorn==20.1.0
 idna==2.10
+logging==0.4.9.6
 psycopg2==2.8.6
 python-dateutil==2.8.1
 pytz==2021.1
+raven==6.10.0
 requests==2.25.1
 selenium==3.141.0
 sentry-sdk==1.0.0
